tests/sksl/errors/UndefinedFunction.sksl
void main() { int x = foo(1); }
